fix: sizing on small screens

--- a/src/app/shared/components/card/card.component.scss
+++ b/src/app/shared/components/card/card.component.scss
@@ -1,6 +1,7 @@
 @import 'variables', 'mixins';
 
 $card-padding: 0.5rem;
+$card-width: 326px;
 $mid-padding: (
   'x': calc(1.5rem - #{$card-padding}),
   'y': 1.25rem
@@ -20,8 +21,10 @@ $bottom-padding: (
   overflow: hidden;
   text-transform: uppercase;
   background-color: $white;
+  box-sizing: border-box;
   @include sm() {
-    width: 326px;
+    box-sizing: content-box;
+    width: $card-width;
   }
 }
 
